# ChangeLog for media-sound/qtmpc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Oct 2009; Jonathan Callen <abcd@gentoo.org> +metadata.xml:
  Add missing metadata.xml

  28 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  qtmpc-9999.ebuild:
  fixed kde useflag in live ebuild

  28 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  qtmpc-0.5.0.ebuild:
  fixed kde useflag

  03 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qtmpc-9999.ebuild:
  Remove keywords

*qtmpc-9999 (03 Apr 2009)

  03 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qtmpc-0.5.0.ebuild,
  +qtmpc-9999.ebuild:
  Add live ebuild, fixed dodoc statement

  30 Jan 2009; Ben de Groot <yngwin@gentoo.org> qtmpc-0.5.0.ebuild:
  Fix header

*qtmpc-0.5.0 (30 Jan 2009)

  30 Jan 2009; Ben de Groot <yngwin@gentoo.org> +qtmpc-0.5.0.ebuild:
  Initial import. Ebuild by Alex 'wired' Alexander.
