@@ -1,5 +1,5 @@
 DIST QtMPC-0.5.0.tar.bz2 90041 RMD160 9e90455d9d210d1a17a3603a84e076d4cefd7a18 SHA1 421298bc8b6a72330b82c6bbf2e5af2b2b4883ef SHA256 5d1bcdc995bef05eaac22c8afbe2c6022c2f9458f1235561585562a0eaa823f6
-EBUILD qtmpc-0.5.0.ebuild 1243 RMD160 c6a6a51b2dba4d7d3df5d842be39648f28bb4072 SHA1 8451145bdae616bb47217d6f1b345f35b801b631 SHA256 38f81661da5c6e3917bae28e04afd5a6a7a66d55581032e6b79b14537378e70d
-EBUILD qtmpc-9999.ebuild 1233 RMD160 09236d20595cb420fa355623c6208d41f94d027a SHA1 69ad9d06f8ea378d2ac590cac27de5c078f0fc32 SHA256 569a88a26570e5cfc88b57993b49b8447a9cd8f0716bcc75481393a9adaee982
-MISC ChangeLog 927 RMD160 aa53dd9bf3b23eb4ad3c83ec5c348456e580eb5e SHA1 1d647f766daa14e919b6811e5148f7b8111841bb SHA256 6a6b34bf6c13183b54d5ab876a4f6de45058f1fcfe1a79a4d5b32f5f2346893b
+EBUILD qtmpc-0.5.0.ebuild 995 RMD160 77b305e7858c480bc6e3831c6883602397e39c64 SHA1 a5d5bae18f8cb355bdf6c8a455de2b037e8e6062 SHA256 7d5ddb4db0a879c1ed557006d56bf7f446652e7d8f2e5c107edffa48992a438a
+EBUILD qtmpc-9999.ebuild 985 RMD160 8af82848eac12a1926ff59dfae64a30997cc78f1 SHA1 d747d07a9ce5e769c773866d1c78cf3bea5514ef SHA256 e53dded44017c41e0aee05f7c1ca86604a94511d20f7b9af188f50c1e0997d7a
+MISC ChangeLog 1038 RMD160 fa432c3eeaaa64d8ec16b606c06897240a81f253 SHA1 8d437db470d6b730ea01d4df2f648e708072ab92 SHA256 3b4153665d5dadfc374bbdf2c5ca409656c7c62175f46556d99cfec888535bbe
 MISC metadata.xml 155 RMD160 654eebe07944b4d18c58e4a54c50758eceead53e SHA1 967490b59f5185a6849cb5583390dd0d0b0dd512 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7
